Stesura della tabella.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Esercizio Booleaner</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <div class="headerimg">
@@ -19,12 +21,70 @@
                 Internet deve essere al servizio del "bene pubblico": il manifesto di Tim-Berners Lee
             </h1>
             <h4 class="subtitlegray">
-                Scritto da Il Booleaner
+                Scritto da <span style="color: #28e6ff">Il Booleaner</span>
             </h4>
             <h6 class="subtitlegray">
                 Il 10/10/2020
             </h6>
         </div>
+        <div>
+            <img src="./assets/img/tim-1.jpg" alt="tim 1">
+            <img src="./assets/img/tim-2.jpg" alt="tim 2">
+        </div>
+        <div>
+            <h5 class="nomargins">1st photo: John S. and James L. Knight Foundation, by Scott Henrichsen </h5>
+            <h5 class="nomargins">2nd photo: Wikimedia, by Paul Clarke</h5>
+        </div>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde non et, eligendi quae, nobis voluptatum
+                esse dolorum ducimus est <mark>recusandae fuga</mark>.
+                Pariatur repudiandae fugit harum ut nam dolore provident dignissimos?
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias, doloremque blanditiis.
+                Aperiam id quas eveniet dolor dolorem fugiat beatae facilis blanditiis iusto autem officia molestiae
+                nobis voluptas libero, nemo minus?
+            </p>
+            <ul>
+                <li>List Item 1</li>
+                <li>List Item 2</li>
+                <li>List Item 3</li>
+            </ul>
+        </div>
+        <div>
+            <table style="width: 100%; border: none; border-collapse: collapse;">
+                <thead>
+                    <tr>
+                        <th class="cellsmall">Lorem ipsum dolor</th>
+                        <th class="cellsmall">Lorem ipsum dolor</th>
+                        <th class="cellbig">Lorem ipsum dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr class="rowblue">
+                        <td class="cellsmall">Lorem ipsum dolor</td>
+                        <td class="cellsmall">Lorem ipsum dolor</td>
+                        <td class="cellbig">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eaque cupiditate exercitationem dolores distinctio
+                            nam accusantium quia inventore quibusdam! Debitis, vitae? Doloribus, porro accusantium eius beatae consequatur
+                            modi labore explicabo.</td>
+                    </tr>
+                    <tr>
+                        <td class="cellsmall">Lorem ipsum dolor</td>
+                        <td class="cellsmall">Lorem ipsum dolor</td>
+                        <td class="cellbig">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eaque cupiditate exercitationem dolores distinctio
+                            nam accusantium quia inventore quibusdam! Debitis, vitae? Doloribus, porro accusantium eius beatae consequatur
+                            modi labore explicabo.</td>
+                    </tr>
+                    <tr class="rowblue">
+                        <td class="cellsmall">Lorem ipsum dolor</td>
+                        <td class="cellsmall">Lorem ipsum dolor</td>
+                        <td class="cellbig">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab eaque cupiditate exercitationem dolores distinctio
+                            nam accusantium quia inventore quibusdam! Debitis, vitae? Doloribus, porro accusantium eius beatae consequatur
+                            modi labore explicabo.</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </main>
 </body>
+
 </html>
