Correzione errore nell'header, completamento esercizio.

--- a/index.html
+++ b/index.html
@@ -84,6 +84,32 @@
                 </tbody>
             </table>
         </div>
+        <div>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit esse tenetur id dicta,
+                omnis iusto ex saepe possimus illum quas suscipit voluptatum fugit perferendis! Exercitationem
+                harum asperiores tenetur aperiam esse!<br>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cupiditate, id tenetur dolores porro dolor ea quam non dolore!
+                Ullam, corporis distinctio. <mark>Ea doloribus saepe tempora</mark>, dolore voluptate voluptatibus ut vero!
+            </p>
+            <h3 class="subtitlegray">
+                Potrebbero interessarti:
+            </h3>
+        </div>
+        <div>
+            <div class="footerimg">
+                <img src="./assets/img/graph.jpg" alt="Graph" width="15%">
+                <div class="footertext">
+                    <h3 class="nomargins">Image Text</h3>
+                </div>
+            </div>
+            <div class="footerimg">
+                <img src="./assets/img/monitor.jpg" alt="Monitor" width="15%">
+                <div class="footertext">
+                    <h3 class="nomargins">Image Text</h3>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 
