Correzione della sintassi degli elementi img.

--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         </div>
         <div>
             <div class="footerimg">
-                <img src="./assets/img/graph.jpg" alt="Graph" width="250px">
+                <img src="./assets/img/graph.jpg" alt="Graph" width="250">
                 <div class="footertext">
                     <h3 class="nomargins">Image Text</h3>
                 </div>
             </div>
             <div class="footerimg">
-                <img src="./assets/img/monitor.jpg" alt="Monitor" width="250px">
+                <img src="./assets/img/monitor.jpg" alt="Monitor" width="250">
                 <div class="footertext">
                     <h3 class="nomargins">Image Text</h3>
                 </div>
